seq-map: find units in mapped flow properties